tests/golden/reject/shim_contains_argtype_reject.goo
// P4.1: shim signature checking — strings.Contains(string, string) rejects
// int args.
package main

import "strings"

func main() {
	strings.Contains(1, 2)
}
